--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,11 @@
 <html>
-<body text='black' bgcolor='#CB202D'>
+<body text='black' >
+
+    <div style="background-color: red; text-align: center;">
+        <h1>Welcome to Data Science Project</h1>
+        <img src="zomato_picture.jpg" alt="Zomato Picture">
+        <h1>Project Name: Zomato Time Prediction</h1>
+      </div>
   <h1>
     <font face="Montserrat" size="45">
         Zomato Delivery Time Prediction
@@ -135,8 +141,7 @@
       <input type="submit" value="Submit">
     </form>    
        
-        <h1>
-          Delivery come in {{final_result}} minutes</h1>
+        <h1>Delivery come in {{final_result}} minutes</h1>
         
         </body>
         </html>
