--- a/templates/index.html
+++ b/templates/index.html
@@ -3,4 +3,6 @@
     <img src="zomato_picture.jpg" alt="Zomato Picture">
     <h1>Project Name: Zomato Time Prediction</h1>
   </div>
+
+  <h1>To check the time prediction check localhost/predict</h1>
   
