--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,6 @@
 <html>
 <body text='black' >
+  
 
     <div style="background-color: red; text-align: center;">
         <h1>Welcome to Data Science Project</h1>
@@ -9,6 +10,8 @@
 
     <form action="{{url_for('predict_datapoint')}}" method="POST">
       <table>
+
+        
         <tr>
           <th><label for="Delivery_person_Age">Age</label></th>
           <td><input type="text" id="Delivery_person_Age" name="Delivery_person_Age" placeholder="Enter AGE"></td>
@@ -134,7 +137,12 @@
 
 
       </table>
-      <input type="submit" value="Submit">
+      <div style="background-color: rgb(243, 238, 238); text-align: center;">
+   
+        <input type="submit" value="Submit" style="width: 200px; height: 50px; background-color: black; color: white; font-size: 23px;">
+   
+      </div>
+      
     </form>    
        
         <h1>Delivery come in {{final_result}} minutes</h1>
