--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,50 @@
-<div style="background-color: red; text-align: center;">
+<!DOCTYPE html>
+<html>
+<head>
+  <title>UI with Background Image</title>
+  <style>
+    body {
+      position: relative;
+    }
+    
+    body::before {
+      content: "";
+      background-image: url("https://static.india.com/wp-content/uploads/2019/12/Zomato.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      opacity: 0.4; /* Set the opacity to 0.2 */
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+    
+    .header {
+      background-color: red;
+      text-align: center;
+      padding: 20px;
+    }
+    
+    .header h1 {
+      margin-top: 0;
+    }
+    
+    .content {
+      margin-top: 50px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="header">
     <h1>Welcome to Data Science Project</h1>
-    <img src="zomato_picture" alt="Zomato Picture">
     <h1>Project Name: Zomato Time Prediction</h1>
   </div>
 
+
+
   <h1>To check the time prediction check localhost/predict</h1>
-  
+</body>
+</html>
