--- a/templates/form.html
+++ b/templates/form.html
@@ -1,8 +1,10 @@
 <html>
-<body text='black' >
+<body text='black' style="background: url(zomato_picture.jpg);
+background-repeat: no-repeat;
+background-size: 100%;background-position-y: 100px;">
   
 
-    <div style="background-color: red; text-align: center;">
+    <div style="background-color: white; text-align: center;">
         <h1>Welcome to Data Science Project</h1>
         
         <h1>Project Name: Zomato Time Prediction</h1>
