--- a/templates/form.html
+++ b/templates/form.html
@@ -139,7 +139,7 @@
       </table>
       <div style="background-color: rgb(243, 238, 238); text-align: center;">
    
-        <input type="submit" value="Submit" style="width: 200px; height: 50px; background-color: black; color: white; font-size: 23px;">
+        <input type="submit" value="Submit" style="width: 200px; height: 50px; background-color: rgb(255, 255, 255); color: rgb(0, 0, 0); font-size: 23px; ">
    
       </div>
       
