Background image with blur added

--- a/templates/form.html
+++ b/templates/form.html
@@ -1,7 +1,5 @@
 <html>
-<body text='black' style="background: url(zomato_picture.jpg);
-background-repeat: no-repeat;
-background-size: 100%;background-position-y: 100px;">
+<body text='black' style="background: linear-gradient(rgba(48, 43, 43, 0.5), rgba(33, 28, 28, 0.5)), url(zomato_picture.jpg) center no-repeat;background-size: 100%;background-position-y: 100px;">
   
 
     <div style="background-color: white; text-align: center;">
