--- a/templates/form.html
+++ b/templates/form.html
@@ -1,8 +1,11 @@
 <html>
-<body text='black' >
+<body text='white' >
+  <body text='white' style="background: url(https://static.india.com/wp-content/uploads/2019/12/Zomato.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;background-position-y: 100px;">
   
 
-    <div style="background-color: red; text-align: center;">
+    <div text='black' style="background-color: red; text-align: center;">
         <h1>Welcome to Data Science Project</h1>
         
         <h1>Project Name: Zomato Time Prediction</h1>
@@ -137,9 +140,9 @@
 
 
       </table>
-      <div style="background-color: rgb(243, 238, 238); text-align: center;">
+      <div text-align: center;">
    
-        <input type="submit" value="Submit" style="width: 200px; height: 50px; background-color: black; color: white; font-size: 23px;">
+        <input type="submit" value="Submit" style="width: 200px; height: 50px; background-color: rgb(247, 8, 8); color: white; font-size: 23px;">
    
       </div>
       
