--- a/templates/form.html
+++ b/templates/form.html
@@ -1,8 +1,10 @@
 <html>
 <body text='white' >
-  <body text='white' style="background: url(https://static.india.com/wp-content/uploads/2019/12/Zomato.jpg);
+  <body text='white' style="background:linear-gradient(rgba(48, 43, 43, 0.7), rgba(33, 28, 28, 0.7)) ,
+    url(https://static.india.com/wp-content/uploads/2019/12/Zomato.jpg);
     background-repeat: no-repeat;
     background-size: 100%;background-position-y: 100px;">
+    </body>
   
 
     <div text='black' style="background-color: red; text-align: center;">
@@ -140,7 +142,7 @@
 
 
       </table>
-      <div text-align: center;">
+      <div style="width:100%; float: left; text-align: center;">
    
         <input type="submit" value="Submit" style="width: 200px; height: 50px; background-color: rgb(247, 8, 8); color: white; font-size: 23px;">
    
